syntax = "proto3";

package Trento.Checks.V1;
option go_package = "/;events";

import "google/protobuf/struct.proto";

message FactError {
  string message = 1;
  string type = 2;
}

message Fact {
  string check_id = 1;
  string name = 2;
  oneof fact_value {
    google.protobuf.Value value = 3;

    FactError error_value = 4;
  }
}

message FactsGathered {
  string execution_id = 1;
  string agent_id = 2;

  repeated Fact facts_gathered = 3;
}
